--- a/.jshintrc
+++ b/.jshintrc
@@ -11,6 +11,7 @@
     "jquery": false,
 
     "predef": [             // Custom globals.
+        "angular",
         "describe",
         "it",
         "before",
