--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gulp-example-project",
   "version": "0.0.1-alpha",
   "private": true,
-  "description": "Example implementation of a project structure using gulp.js and Bower.",
+  "description": "Example AngularJS project, structured by feature rather than file-type. Build script using gulp.js.",
   "main": "server/server.js",
   "scripts": {
     "start": "npm install && nodemon --exec \"npm run gulp\" --watch package.json --watch gulpfile.js --watch gulp --ignore .git --ignore .idea --ignore node_modules --ignore client --ignore dist --ignore server --ignore bower.json --ext js,json",
@@ -29,7 +29,11 @@
     "url": "git://github.com/hugojosefson/gulp-example-project.git"
   },
   "keywords": [
+    "angularjs",
     "gulp",
+    "by-feature",
+    "by",
+    "feature",
     "project",
     "structure",
     "template",
@@ -53,6 +57,8 @@
     "chai": "^2.0.0",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
+    "gulp-angular-filesort": "^1.1.1",
+    "gulp-angular-templatecache": "^1.5.0",
     "gulp-bower": "0.0.10",
     "gulp-concat": "^2.5.1",
     "gulp-develop-server": "^0.2.5",
@@ -60,6 +66,7 @@
     "gulp-ignore": "^1.2.1",
     "gulp-minify-css": "^0.4.6",
     "gulp-mocha": "^2.0.0",
+    "gulp-ng-annotate": "^0.5.2",
     "gulp-production-package-json": "^1.0.2",
     "gulp-uglify": "^1.1.0",
     "is-production": "^1.0.1",
