--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "homepage": "https://github.com/hugojosefson/gulp-example-project",
   "engines": {
-    "node": ">=0.10"
+    "node": "0.12"
   },
   "dependencies": {
     "express": "4"
