--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "angular": "~1.3.13",
     "angular-route": "~1.3.13",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "parse": "~1.6.0"
   },
   "resolutions": {
     "angular": "1.3.13"
