--- a/bower.json
+++ b/bower.json
@@ -29,9 +29,10 @@
   "dependencies": {
     "angular": "~1.3.13",
     "angular-route": "~1.3.13",
-    "parse": "~1.6.0"
+    "parse": "~1.6.0",
+    "locator": "winkerVSbecks/locator"
   },
   "resolutions": {
-    "angular": "1.3.13"
+    "angular": "1.3.20"
   }
 }
