--- a/bower.json
+++ b/bower.json
@@ -29,8 +29,7 @@
   "dependencies": {
     "angular": "~1.3.13",
     "angular-route": "~1.3.13",
-    "parse": "~1.6.0",
-    "locator": "winkerVSbecks/locator"
+    "parse": "~1.6.0"
   },
   "resolutions": {
     "angular": "1.3.20"
