--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "gulp-angular-filesort": "^1.1.1",
     "gulp-angular-templatecache": "^1.5.0",
     "gulp-bower": "0.0.10",
+    "gulp-coffee": "^2.3.1",
     "gulp-concat": "^2.5.1",
     "gulp-develop-server": "^0.2.5",
     "gulp-if": "^1.2.5",
