--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "node": ">=4.8.4"
   },
   "dependencies": {
-    "express": "4"
+    "express": ">=4.5.0"
   },
   "devDependencies": {
     "bower": "^1.3.12",
